# Learning

./: .gitignore  README.md
CKA/: notes.txt
DSA/: package-lock.json
DynamoDB-local-with-serverless-framework-and-GraphQL/: README.md  package.json  tsconfig.json
React-Hooks-flux-state-management/: .eslintrc  README.md  jest.config.js  jest.setup.js  package.json
ReactNativeExpoApp/: .env.example  README.md  app.json  package-lock.json  package.json
algorithms/: README.md  package.json
averages-18-01-2020/: averages.test.js
c-algorithms/: conditional.c  iteration  tempConversionTable.c
c-getting-started/: README.md  fahrenheitToCelcius  fibonacci  iteration.c  name  name.c  strLenAndSize  stringConcat  stringConcat.c  stringCopy.c  tempConversionTable
cdk-app/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  pyproject.toml
cdk-eks-k8s/: README.md
cdk-exercises/: README.md
cka/: notes.txt
coffee-ratings/: README.md  package-lock.json  package.json
data-structures-and-algorithms/: package-lock.json  package.json
ec2-user-data/: index.html  install-apache-ec2-usr-data.sh
file-search/: README.md  fileSearch.js  package.json
giphy-search/: README.md  package.json
go-giphy-search/: .env.example  .gitignore  README.md
hacker-news-client/: package.json
katas/: .gitignore  README.md
learning-celery/: .gitignore  README.md  pyproject.toml  tasks.py
linux-udemy-course/: Vagrantfile  notes.txt
metrics-dashboard/: README.md  package.json
news-page/: .env.development  .gitignore  README.md  go.mod  go.sum  main.go
(+373 files in other folders)
