[tool.poetry]
name = "cdk-app"
version = "0.1.0"
description = "CDK experiments"
authors = ["Matt Long <1992.mdl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.12.0"
constructs = "^10.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
